src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Education_Status_at_End_Senior__c</fullName>
        <label>Education Status at End (Senior)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grad in standard num yrs (non-rigorous)</fullName>
                </value>
                <value>
                    <fullName>Grad in standard num yrs (rigorous)</fullName>
                </value>
                <value>
                    <fullName>Grad in non-standard num yrs</fullName>
                </value>
                <value>
                    <fullName>Received alt. credential</fullName>
                </value>
                <value>
                    <fullName>Neither grad nor received alt. credential</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant) (UB)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Diploma/rigorous course of study (UB)</fullName>
                </value>
                <value>
                    <fullName>Diploma/nonrigorous course of study (UB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Educational_Status_at_Start_Adult__c</fullName>
        <inlineHelpText>Educational status of participants over 19.</inlineHelpText>
        <label>Educational Status at Start (Adult)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1_Adult w/o Cred Alternative Ed</fullName>
                </value>
                <value>
                    <fullName>A2_Adult w/o Cred NOT in A1 or A5</fullName>
                </value>
                <value>
                    <fullName>A3_HS/GED Grad NOT in postsec</fullName>
                </value>
                <value>
                    <fullName>A4_Adult w/Cred postsec dropout</fullName>
                </value>
                <value>
                    <fullName>A5_Adult w/o HS Cred postsec dropout</fullName>
                </value>
                <value>
                    <fullName>A6_Potential postsec transfer</fullName>
                </value>
                <value>
                    <fullName>A7_Postsec student</fullName>
                </value>
                <value>
                    <fullName>A8_Other</fullName>
                </value>
                <value>
                    <fullName>A9_Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <label>Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (at job arranged by project)</fullName>
                </value>
                <value>
                    <fullName>Yes (student secured w/o assistance)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrolled_in_PSE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled in PSE?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_App_Completion__c</fullName>
        <label>Financial Aid App Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed FAFSA but did NOT Enroll in Postsec (TS)</fullName>
                </value>
                <value>
                    <fullName>Completed FAFSA and enrolled in postsec</fullName>
                </value>
                <value>
                    <fullName>Did NOT Complete FAFSA</fullName>
                </value>
                <value>
                    <fullName>n/a (did not complete HS this report yr)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Completed FAFSA (UB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <label>GPA</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Sec_Grad_Rigor_Dashboard_support__c</fullName>
        <formula>ISPICKVAL(Contact.Intake_Location__c, &apos;UB Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp;
Active__c = True &amp;&amp;
ISPICKVAL(Education_Status_at_End_Senior__c, &apos;Diploma/rigorous course of study (UB)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal % Sec Grad Rigor Dashboard support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Secondary_Retention_and_Grad__c</fullName>
        <label>Goal % Secondary Retention and Grad</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grade_Level_at_Next_Year_Start__c</fullName>
        <label>Grade Level at Start of NEXT Year (UB)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grade 9 (Freshman)</fullName>
                </value>
                <value>
                    <fullName>Grade 11 (Junior)</fullName>
                </value>
                <value>
                    <fullName>Grade 12 (Senior)</fullName>
                </value>
                <value>
                    <fullName>Enrolled in or completed postsec</fullName>
                </value>
                <value>
                    <fullName>In 5th year of 5-year dual enrollment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>n/a (not enrolled in HS or postsec)</fullName>
                </value>
                <value>
                    <fullName>Grade 10 (Sophomore)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Level_at_Start_Non_Adult__c</fullName>
        <label>Grade Level at Start (Non-Adult)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grade 6-8 (Middle School)</fullName>
                </value>
                <value>
                    <fullName>Grade 9 (Freshman)</fullName>
                </value>
                <value>
                    <fullName>Grade 10 (Sophomore)</fullName>
                </value>
                <value>
                    <fullName>Grade 11 (Junior)</fullName>
                </value>
                <value>
                    <fullName>Grade 12 (Senior)</fullName>
                </value>
                <value>
                    <fullName>In HS Equivalency or Alt. Non-Graded</fullName>
                </value>
                <value>
                    <fullName>In 4th year of 5-year dual enrollment</fullName>
                </value>
                <value>
                    <fullName>In 5th year of 5-year dual enrollment</fullName>
                </value>
                <value>
                    <fullName>Secondary School dropout</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Enrolled in or completed postsec (UB)</fullName>
                </value>
                <value>
                    <fullName>n/a (did not enroll in HS or postsec) (UB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HS_Cumulative_Unweighted_GPA_at_EOAY__c</fullName>
        <inlineHelpText>High School Cumulative Unweighted Grade Point Average (GPA), at end of academic year, being reported.</inlineHelpText>
        <label>HS Cumulative Unweighted GPA at EOAY</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HS_Graduation_End_Status__c</fullName>
        <label>HS Graduation End Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currently enrolled in HS</fullName>
                </value>
                <value>
                    <fullName>HS dropout</fullName>
                </value>
                <value>
                    <fullName>Received reg. secondary school diploma</fullName>
                </value>
                <value>
                    <fullName>Received HS equivalency (e.g., GED)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Completed 12th gr but failed to graduate</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instruction_Tutorial_for_LEP_FRY__c</fullName>
        <inlineHelpText>Instruction/Tutorial for Students with Limited English Proficiency, for reporting year.</inlineHelpText>
        <label>Instruction/Tutorial for LEP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (not offered)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_College_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is College Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_English_Proficient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is English Proficient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Met_State_Math__c</fullName>
        <label>Met State-Math</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Met_State_Reading__c</fullName>
        <label>Met State-Reading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obj_A_Secondary_School_Diploma__c</fullName>
        <label>Obj A Secondary School Diploma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rec&apos;d secondary school diploma/equiv.</fullName>
                </value>
                <value>
                    <fullName>Enrolled alt. program, not completed</fullName>
                </value>
                <value>
                    <fullName>Enrolled HS, not completed</fullName>
                </value>
                <value>
                    <fullName>Not enrolled HS or alt. program</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obj_C_Post_Secondary_Ed_Admissions__c</fullName>
        <label>Obj C - Post Secondary Ed Admissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Did Not Apply</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_School__c</fullName>
        <label>Other School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Status__c</fullName>
        <label>Participant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Continuing</fullName>
                </value>
                <value>
                    <fullName>Reentry, previously served (UB)</fullName>
                </value>
                <value>
                    <fullName>Prior-year (UB)</fullName>
                </value>
                <value>
                    <fullName>Transfer (UB/UBMS served by another UB/UBMS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participation_Level_for_Reporting_Year__c</fullName>
        <label>Participation Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic year and summer components</fullName>
                </value>
                <value>
                    <fullName>Academic year and summer bridge</fullName>
                </value>
                <value>
                    <fullName>Academic year component only</fullName>
                </value>
                <value>
                    <fullName>Summer component only</fullName>
                </value>
                <value>
                    <fullName>Summer bridge only</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Secondary_Enrollment_Status__c</fullName>
        <label>Post Secondary Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled or Deferred PSE (TS)</fullName>
                </value>
                <value>
                    <fullName>Earned sec diploma &amp; deferred PSE (UB)</fullName>
                </value>
                <value>
                    <fullName>Earned sec diploma &amp; unknown PSE (UB)</fullName>
                </value>
                <value>
                    <fullName>Earned sec dipl. &amp; enrolled PSE (UB/EOC)</fullName>
                </value>
                <value>
                    <fullName>Did NOT enroll in PSE (EOC)</fullName>
                </value>
                <value>
                    <fullName>Had sec diploma &amp; enrolled PSE</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant) (UB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Secondary_Placement__c</fullName>
        <label>Post Secondary Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public 2-yr Institution</fullName>
                </value>
                <value>
                    <fullName>Private 2-yr Institution</fullName>
                </value>
                <value>
                    <fullName>Public 4-yr Institution</fullName>
                </value>
                <value>
                    <fullName>Private 4-yr Institution</fullName>
                </value>
                <value>
                    <fullName>Vocational/trade Institution</fullName>
                </value>
                <value>
                    <fullName>Proprietary School</fullName>
                </value>
                <value>
                    <fullName>Unknown Institution</fullName>
                </value>
                <value>
                    <fullName>Private non-profit 2-yr Institution</fullName>
                </value>
                <value>
                    <fullName>Private non-profit 4-yr Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Secondary_Remediation__c</fullName>
        <label>Post Secondary Remediation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Remediation</fullName>
                </value>
                <value>
                    <fullName>Yes, Received Remediation</fullName>
                </value>
                <value>
                    <fullName>n/a not in post secondary ed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Secondary_School__c</fullName>
        <label>Post Secondary School</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postsecondary_Attainment_Completion__c</fullName>
        <inlineHelpText>Post Secondary Attainment (TS Obj. E)/Completion(UB) Objective - Numerator, for reporting year (UB and TS).</inlineHelpText>
        <label>Postsecondary Attainment/Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (Cert. only, 6 yrs after HS grad)</fullName>
                </value>
                <value>
                    <fullName>Yes (Assoc. Degree, 6 yrs after HS grad)</fullName>
                </value>
                <value>
                    <fullName>Yes (Bach. Degree, 6 yrs after HS grad)</fullName>
                </value>
                <value>
                    <fullName>Yes (Assoc. AND Bach., 6 yrs after HS)</fullName>
                </value>
                <value>
                    <fullName>Yes (Multi-cred (other), 6 yrs after HS)</fullName>
                </value>
                <value>
                    <fullName>No (No cert or degree, 6 yrs after HS)</fullName>
                </value>
                <value>
                    <fullName>n/a (is not 6 yrs after HS grad)</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_Project__c</fullName>
        <label>Reason for Leaving Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need or desire for employment</fullName>
                </value>
                <value>
                    <fullName>Moved out of target area</fullName>
                </value>
                <value>
                    <fullName>Dropped out of high school</fullName>
                </value>
                <value>
                    <fullName>Other extra-curricular activities</fullName>
                </value>
                <value>
                    <fullName>Other program (non-UB/UBMS)</fullName>
                </value>
                <value>
                    <fullName>No longer interested in the program</fullName>
                </value>
                <value>
                    <fullName>Family responsibilities</fullName>
                </value>
                <value>
                    <fullName>Graduated from high school</fullName>
                </value>
                <value>
                    <fullName>No longer used</fullName>
                </value>
                <value>
                    <fullName>Obtained GED</fullName>
                </value>
                <value>
                    <fullName>Deceased or permanently incapacitated</fullName>
                </value>
                <value>
                    <fullName>Dismissed (academic standards)</fullName>
                </value>
                <value>
                    <fullName>Dismissed (conduct standards)</fullName>
                </value>
                <value>
                    <fullName>Transferred to other UB/UBMS project</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>n/a (is still in program)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should NOT be used!  See SFD-58.</description>
        <inlineHelpText>This field should NOT be used!  See SFD-58.</inlineHelpText>
        <label>Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rigorous_Enrollment__c</fullName>
        <label>Rigorous Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid with TS grant funds</fullName>
                </value>
                <value>
                    <fullName>Provided in school with no cost to TS</fullName>
                </value>
                <value>
                    <fullName>Provided by partner at no cost to TS</fullName>
                </value>
                <value>
                    <fullName>Received third-party tuition waivers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_School_Dual_Enrollment__c</fullName>
        <label>Secondary School Dual Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (TS)</fullName>
                </value>
                <value>
                    <fullName>No (school does not offer) (TS)</fullName>
                </value>
                <value>
                    <fullName>No (school offers) (TS)</fullName>
                </value>
                <value>
                    <fullName>Yes (program w 5th year of HS) (UB)</fullName>
                </value>
                <value>
                    <fullName>Yes (program w/o 5th year of HS) (UB)</fullName>
                </value>
                <value>
                    <fullName>No (UB)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant) (UB)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_School_Persistence__c</fullName>
        <label>Secondary School Persistence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Persisted at next grade or graduated HS</fullName>
                </value>
                <value>
                    <fullName>Persisted at same grade</fullName>
                </value>
                <value>
                    <fullName>Dropped out of school</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_School__c</fullName>
        <label>Secondary School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abington High School</fullName>
                </value>
                <value>
                    <fullName>Attleboro High School</fullName>
                </value>
                <value>
                    <fullName>Avon High School</fullName>
                </value>
                <value>
                    <fullName>Blue Hills Regional High School</fullName>
                </value>
                <value>
                    <fullName>Boston Latin Academy</fullName>
                </value>
                <value>
                    <fullName>Breed Middle School</fullName>
                </value>
                <value>
                    <fullName>Bridgewater-Raynham Regional High School</fullName>
                </value>
                <value>
                    <fullName>Brighton High School</fullName>
                </value>
                <value>
                    <fullName>Brockton High School</fullName>
                </value>
                <value>
                    <fullName>Brook Farm Business and Service Career</fullName>
                </value>
                <value>
                    <fullName>Brookline High School</fullName>
                </value>
                <value>
                    <fullName>Canton High School</fullName>
                </value>
                <value>
                    <fullName>Cardinal Spellman High School</fullName>
                </value>
                <value>
                    <fullName>Career Development Center School</fullName>
                </value>
                <value>
                    <fullName>Charlestown High School</fullName>
                </value>
                <value>
                    <fullName>Community Academy of Science &amp; Health (CASH)</fullName>
                </value>
                <value>
                    <fullName>Dorchester High School</fullName>
                </value>
                <value>
                    <fullName>East Boston High School</fullName>
                </value>
                <value>
                    <fullName>English High School</fullName>
                </value>
                <value>
                    <fullName>Everett High School</fullName>
                </value>
                <value>
                    <fullName>Jeremiah Burke High School</fullName>
                </value>
                <value>
                    <fullName>Lynn Alternative High School</fullName>
                </value>
                <value>
                    <fullName>Lynn Classical High School</fullName>
                </value>
                <value>
                    <fullName>Lynn English High School</fullName>
                </value>
                <value>
                    <fullName>Lynn Vocational Technical Institute School</fullName>
                </value>
                <value>
                    <fullName>Madison Park High School</fullName>
                </value>
                <value>
                    <fullName>Mario Umana Academy</fullName>
                </value>
                <value>
                    <fullName>Mary Lyon High School</fullName>
                </value>
                <value>
                    <fullName>Medford High School</fullName>
                </value>
                <value>
                    <fullName>Media Communications Technology High School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Served__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Served</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Served_by_Other_Trio__c</fullName>
        <label>Served by Other Trio/fed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upward Bound (UB)</fullName>
                </value>
                <value>
                    <fullName>Upward Bound Math-Science (UBMS)</fullName>
                </value>
                <value>
                    <fullName>Veterans Upward Bound (VUB)</fullName>
                </value>
                <value>
                    <fullName>Educational Opportunity Centers (EOC)</fullName>
                </value>
                <value>
                    <fullName>Gear Up</fullName>
                </value>
                <value>
                    <fullName>Talent Search (TS)</fullName>
                </value>
                <value>
                    <fullName>Student Support Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Served by &gt; 1 fed funded program</fullName>
                </value>
                <value>
                    <fullName>n/a (not served by other Trio/Fed)</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>n/a (prior participant) (UB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Post_Secondary_Ed_Information__c</fullName>
        <inlineHelpText>Source of Post Secondary Education Information.</inlineHelpText>
        <label>Source of Post Secondary Education Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Official college transcript</fullName>
                </value>
                <value>
                    <fullName>Institutional data other than transcript</fullName>
                </value>
                <value>
                    <fullName>Self-reported by participant</fullName>
                </value>
                <value>
                    <fullName>Other third-party verification</fullName>
                </value>
                <value>
                    <fullName>n/a (still in HS)</fullName>
                </value>
                <value>
                    <fullName>n/a (not enrolled in postsec)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>